--- a/app/src/main/res/layout/activity_recycler_view.xml
+++ b/app/src/main/res/layout/activity_recycler_view.xml
@@ -2,7 +2,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RecyclerViewActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    tools:context=".target.RecyclerViewActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
@@ -11,18 +14,38 @@
         android:scrollbars="vertical" />
 
     <Button
-        android:id="@+id/fab_button"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:transitionName="fab"
-
-        android:layout_marginTop="126dp"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_alignParentEnd="true"
-        android:elevation="5dp"
-        android:background="56dp"
-        android:stateListAnimator="@anim/fab_anim"
-
+        android:id="@+id/custom_login"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="@string/action_sign_in"
+        style="?android:textAppearanceSmall"
+        android:onClick="onLoginPressed"
+        android:textStyle="bold"
         />
 
+    <Button
+        android:id="@+id/google_signin"
+        android:layout_above="@+id/custom_login"
+        android:paddingTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Google sign in"
+        style="?android:textAppearanceSmall"
+        android:onClick="onGoogleLoginPressed"
+        />
+    <ImageButton
+        android:layout_width="@dimen/fab_size"
+        android:layout_height="@dimen/fab_size"
+        android:layout_alignParentRight="true"
+        android:layout_above="@+id/google_signin"
+        android:layout_gravity="bottom|right"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/ripple_round"
+        android:stateListAnimator="@anim/fab_anim"
+        android:elevation="10dp"
+        android:id="@+id/fab_button"
+        android:onClick="onFabPressed"
+        />
 </RelativeLayout>
