--- a/app/src/main/res/values/strings_activity_login.xml
+++ b/app/src/main/res/values/strings_activity_login.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="title_activity_login">Sign in</string>
-
+    <string name="title_text">Google Sign-In\nQuickstart</string>
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
